...
      initialRouteName={
        initiallyConnected.current ? screens.MANUAL : screens.EMPTY
      }
      screenOptions={{
        headerBackButtonDisplayMode: 'minimal',
        headerBackAccessibilityLabel: Strings.Core.Back,
        headerBackTestID: 'registration-back',
        headerShadowVisible: false,
        headerMode: 'float',
      }}>
      <Stack.Screen
        name={screens.EMPTY}
        options={{headerShown: false}}
...
                      testID: 'connection-error-retry',
                    }
              }
            />
          )}
          <DetailsAction
            id="registration-manual"
            label={Strings.Registration.QRCode.Manually}
            icon="keyboard-outline"
            block
            onPress={async () => {
              await cancel();
              navigation.replace(screens.MANUAL);
...
